# common

./: .gitignore  AUTOM  AUTOM.build  CMakeLists.txt
cmake/: OmegaGraphicsSuite.cmake
embedbin/: embedbin.cpp
include/: OmegaCommon.owrap  fs.h  utils.h
include/omega-common/: common.h  crt.h  format.h  fs.h  json.h  multithread.h  net.h  utils.h  xml.h
src/: crt.c  format.cpp  fs-cocoa.mm  fs-unixother.cpp  fs-win.cpp  fs.cpp  json.cpp  multithread-unix.cpp  multithread-win.cpp  net-win.cpp  utils.cpp  xml.cpp
wrapgen/: ast.cpp  ast.h  example.owrap  gen_c.cpp  lexer.cpp  lexer.h  main.cpp  nodes.def  parser.cpp  parser.h  toks.def  wrapper_gen.h
wrapgen/main/: main.cpp
wrapgen/tests/: lex-test.cpp  myHeader.h  parse-test.cpp
